# Traffic_sim

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_cases.csv
legacy/: README.md  test_cases_legacy.csv
scripts/: generate_test_cases.py
tests/: conftest.py  test_benchmark.py  test_camera.py  test_dynamics.py  test_geometry.py  test_network_and_control.py
trafficSim/: simulation.py  test_cases.csv  window.py
traffic_sim/: __init__.py  car_following.py  config.py  generator.py  geometry.py  metrics.py  network.py  signals.py  simulation.py  vehicle.py
traffic_sim/rendering/: __init__.py  camera.py  renderer.py  window.py
traffic_sim/scenarios/: __init__.py  base.py  intersections.py  roundabout.py
